MarcosSanchezSpring/src/main/java/com/example/marcossanchezspring/domain/errors/ErrorAppGrupos.java
package com.example.marcossanchezspring.domain.errors;

public enum ErrorAppGrupos implements ErrorApp {
    GRUPO_YA_EXISTE,
    NO_GROUPS_FOUND,
}
